<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:text="@string/phoneBookHeader"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editPostalAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/streetAddress"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/state"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/zipCode"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phoneNumber"
            android:inputType="number" />

        <TextView
            android:id="@+id/viewTextContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/typeOfContact"
            android:textSize="20sp"
            android:height="30dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radioButtonFamily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactFamily" />

            <RadioButton
                android:id="@+id/radioButtonFriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactFriend" />

            <RadioButton
                android:id="@+id/radioButtonBusinessContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactBusiness" />

            <RadioButton
                android:id="@+id/radioButtonOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contactOther" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </RadioGroup>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>